edited gulpfile, solution-media

--- a/index.html
+++ b/index.html
@@ -9,55 +9,53 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header class='header'>
-        <div class="container container--header">
-            <div class="header__logo">
-                <div class="header__logo-img"></div>
-                <div class="header__logo-text">ForkIO</div>
-            </div>
-            <a href="#" class="btn btn--medium">Buy Now</a>
-
-            <a href="#" class="header__menu-icon"></a>
-
-            <ul class="header-menu">
-                <li class="header-menu__item">
-                    <a href="#" class="header-menu__link">Overview</a>
-                </li>
-                <li class="header-menu__item">    
-                    <a href="#" class="header-menu__link">About Fork</a>
-                </li>
-                <li class="header-menu__item">    
-                    <a href="#" class="header-menu__link">Buying Options</a>
-                </li>
-                <li class="header-menu__item">
-                    <a href="#" class="header-menu__link">Support</a>
-                </li>
-            </ul>
-        </div>    
-    </header>    
-     <section  class="company">
-        <div class="container container--company">
-           <h1 class="company__title">Fork App</h1>
-            <p class="company__slogan">A real gamechanger in the world of web development</p>
-            <p class="company__description">v. 2.8 For Mac and Windows</p>
-            <div class="block-proposition">
-                <a href="#" class="btn btn--large">Download For Free Now</a>
-                <p class="company__proposition">Unlimited 30-Days Trial Period</p>
-            </div>            
+<header class='header'>
+    <div class="container container--header">
+        <div class="header__logo">
+            <div class="header__logo-img"></div>
+            <div class="header__logo-text">ForkIO</div>
         </div>
-    </section > 
+        <a href="#" class="btn btn--medium">Buy Now</a>
+        <a href="#" class="header__menu-icon"></a>
+        <ul class="header-menu">
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">Overview</a>
+            </li>
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">About Fork</a>
+            </li>
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">Buying Options</a>
+            </li>
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">Support</a>
+            </li>
+        </ul>
+    </div>
+</header>
+<section class="company">
+    <div class="container container--company">
+        <h1 class="company__title">Fork App</h1>
+        <p class="company__slogan">A real gamechanger in the world of web development</p>
+        <p class="company__description">v. 2.8 For Mac and Windows</p>
+        <div class="block-proposition">
+            <a href="#" class="btn btn--large">Download For Free Now</a>
+            <p class="company__proposition">Unlimited 30-Days Trial Period</p>
+        </div>
+    </div>
+</section>
 
 <!--Revolution editor-->
-    <section class='editor'>
-        <div class="container container--editor">
-            <h1 class="editor__title">Revolutionary editor</h1>
-            <p class="editor__descrition">Aenean cursus imperdiet nisl id 
-                fermentum. Aliquam pharetra dui laoreet vulputate dignissim. 
-                Sed id metus id quam auctor molestie eget ut augue.
-            </p>
-        </div>    
+<section class='editor'>
+    <div class="container container--editor">
+        <h1 class="editor__title">Revolutionary editor</h1>
+        <p class="editor__descrition">Aenean cursus imperdiet nisl id
+            fermentum. Aliquam pharetra dui laoreet vulputate dignissim.
+            Sed id metus id quam auctor molestie eget ut augue.
+        </p>
+    </div>
 
-    </section>
+</section>
 
 <!--Solution-->
 
@@ -76,12 +74,10 @@
                 <div class="solution__description-block-main">
                     <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
                     <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
-                        idea of
-                        denouncing pleasure and praising pain was born and I will give you a complete account of the
-                        system,
-                        and
-                        expound the actual teachings of the great explorer of the truth, the master-builder of human
-                        happiness.</p>
+                        idea of denouncing pleasure and praising pain was born and I will give you a complete account of
+                        the system, and expound the actual teachings of the great explorer of the truth, the
+                        master-builder of human happiness.
+                    </p>
                 </div>
             </div>
             <div class="solution__description-block">
@@ -91,12 +87,10 @@
                 <div class="solution__description-block-main">
                     <h2 class="solution__description-block-main-title">Incredibly Powerful Tool</h2>
                     <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
-                        idea of
-                        denouncing pleasure and praising pain was born and I will give you a complete account of the
-                        system,
-                        and
-                        expound the actual teachings of the great explorer of the truth, the master-builder of human
-                        happiness.</p>
+                        idea of denouncing pleasure and praising pain was born and I will give you a complete account of
+                        the system, and expound the actual teachings of the great explorer of the truth, the
+                        master-builder of human happiness.
+                    </p>
                 </div>
             </div>
             <div class="solution__description-block">
@@ -106,12 +100,10 @@
                 <div class="solution__description-block-main">
                     <h2 class="solution__description-block-main-title">Experimental Stuff</h2>
                     <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
-                        idea of
-                        denouncing pleasure and praising pain was born and I will give you a complete account of the
-                        system,
-                        and
-                        expound the actual teachings of the great explorer of the truth, the master-builder of human
-                        happiness.</p>
+                        idea of denouncing pleasure and praising pain was born and I will give you a complete account of
+                        the system, and expound the actual teachings of the great explorer of the truth, the
+                        master-builder of human happiness.
+                    </p>
                 </div>
             </div>
             <div class="solution__description-block">
@@ -121,12 +113,10 @@
                 <div class="solution__description-block-main">
                     <h2 class="solution__description-block-main-title">Created To Make The Web Better</h2>
                     <p class="solution__description-block-main-text">But I must explain to you how all this mistaken
-                        idea of
-                        denouncing pleasure and praising pain was born and I will give you a complete account of the
-                        system,
-                        and
-                        expound the actual teachings of the great explorer of the truth, the master-builder of human
-                        happiness.</p>
+                        idea of denouncing pleasure and praising pain was born and I will give you a complete account of
+                        the system, and expound the actual teachings of the great explorer of the truth, the
+                        master-builder of human happiness.
+                    </p>
                 </div>
             </div>
         </div>
@@ -155,11 +145,11 @@
                         </div>
                     </div>
                     <div class="social__slick__info">
-                        <p class="social__slick__info-feedback"><span class="social__slick__info-name">@skyWalker </span>When
-                            you look at the dark side, careful you must be, for the dark side looks back.</p>
-                        <span class="social__slick__info-last-feedback">
-                        200000 years ago
-                    </span>
+                        <p class="social__slick__info-feedback">
+                            <span class="social__slick__info-name">@skyWalker </span>When you look at the dark side,
+                            careful you must be, for the dark side looks back.
+                        </p>
+                        <span class="social__slick__info-last-feedback">200000 years ago</span>
                     </div>
                 </div>
             </div>
@@ -169,16 +159,22 @@
         </div>
         <div class="social__info">
             <div class="social__info-git">
-                <a href="https://gitlab.com/TarasBurdeniuk/step2_forkio?nav_source=navbar" target="_blank" class="social__info-git__link"><i class="fab fa-github social__info-git-logo"></i>GitHub</a>
+                <a href="https://gitlab.com/TarasBurdeniuk/step2_forkio?nav_source=navbar" target="_blank"
+                   class="social__info-git__link">
+                    <i class="fab fa-github social__info-git-logo"></i>GitHub
+                </a>
                 <span class="social__info-git__foll">7 352 Followers</span>
             </div>
             <div class="social__info-twitter">
-                <a href="https://twitter.com/jack?lang=uk" class="social__info-twitter__link" target="_blank"><i class="fab fa-twitter social__info-twitter-logo"></i>Twitter</a>
+                <a href="https://twitter.com/jack?lang=uk" class="social__info-twitter__link" target="_blank">
+                    <i class="fab fa-twitter social__info-twitter-logo"></i>Twitter
+                </a>
                 <span class="social__info-twitter__foll">136 312 Followers</span>
             </div>
             <div class="social__info-facebook">
-                <a href="https://www.facebook.com/zuck" class="social__info-facebook__link" target="_blank"><i
-                        class="fab fa-facebook-f social__info-facebook-logo"></i>Facebook</a>
+                <a href="https://www.facebook.com/zuck" class="social__info-facebook__link" target="_blank">
+                    <i class="fab fa-facebook-f social__info-facebook-logo"></i>Facebook
+                </a>
                 <span class="social__info-facebook__foll">218 092 Subscribers</span>
             </div>
         </div>
@@ -229,16 +225,21 @@
         <div class="footer__container_menu-nav">
             <h4 class="footer__container_menu-nav__title">Navigation</h4>
             <ul class="footer__container_menu-nav_bar">
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Home</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Overview</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">About</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Buying Options</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Support</a></li>
+                <li class="footer__container_menu-nav_bar-link">
+                    <a class="footer__container_menu-nav_bar-link-item" href="#">Home</a>
+                </li>
+                <li class="footer__container_menu-nav_bar-link">
+                    <a class="footer__container_menu-nav_bar-link-item" href="#">Overview</a>
+                </li>
+                <li class="footer__container_menu-nav_bar-link">
+                    <a class="footer__container_menu-nav_bar-link-item" href="#">About</a>
+                </li>
+                <li class="footer__container_menu-nav_bar-link">
+                    <a class="footer__container_menu-nav_bar-link-item" href="#">Buying Options</a>
+                </li>
+                <li class="footer__container_menu-nav_bar-link">
+                    <a class="footer__container_menu-nav_bar-link-item" href="#">Support</a>
+                </li>
             </ul>
         </div>
         <div class="footer__container__requisites">
@@ -255,8 +256,8 @@
         <div class="footer__container__info">
             <h4 class="footer__container__info-title">Info</h4>
             <p class="footer__container__info-text">Wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-                suscipit
-                lobortis nisl ut aliquip ex commodo consequat. Autem vel hendrerit iriure dolor in hendrerit.</p>
+                suscipit lobortis nisl ut aliquip ex commodo consequat. Autem vel hendrerit iriure dolor in hendrerit.
+            </p>
         </div>
     </div>
 </footer>
