--- a/index.html
+++ b/index.html
@@ -9,43 +9,43 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header class='header'>
-        <div class="container container--header">
-            <a href="#" class="header__logo">
-                <div class="header__logo-img"></div>
-                <div class="header__logo-text">ForkIO</div>
-            </a>
-            <a href="#" class="btn btn--medium">Buy Now</a>
-
-            <a href="#" class="header__menu-icon"></a>
-
-            <ul class="header-menu">
-                <li class="header-menu__item">
-                    <a href="#" class="header-menu__link">Overview</a>
-                </li>
-                <li class="header-menu__item">    
-                    <a href="#" class="header-menu__link">About Fork</a>
-                </li>
-                <li class="header-menu__item">    
-                    <a href="#" class="header-menu__link">Buying Options</a>
-                </li>
-                <li class="header-menu__item">
-                    <a href="#" class="header-menu__link">Support</a>
-                </li>
-            </ul>
-        </div>    
-    </header>    
-     <section  class="company">
-        <div class="container container--company">
-           <h1 class="company__title">Fork App</h1>
-            <p class="company__slogan">A real gamechanger in the world of web development</p>
-            <p class="company__description">v. 2.8 For Mac and Windows</p>
-            <div class="block-proposition">
-                <a href="#" class="btn btn--large">Download For Free Now</a>
-                <p class="company__proposition">Unlimited 30-Days Trial Period</p>
-            </div>            
+<header class='header'>
+    <div class="container container--header">
+        <div class="header__logo">
+            <div class="header__logo-img"></div>
+            <div class="header__logo-text">ForkIO</div>
         </div>
-    </section > 
+        <a href="#" class="btn btn--medium">Buy Now</a>
+
+        <a href="#" class="header__menu-icon"></a>
+
+        <ul class="header-menu">
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">Overview</a>
+            </li>
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">About Fork</a>
+            </li>
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">Buying Options</a>
+            </li>
+            <li class="header-menu__item">
+                <a href="#" class="header-menu__link">Support</a>
+            </li>
+        </ul>
+    </div>
+</header>
+<section class="company">
+    <div class="container container--company">
+        <h1 class="company__title">Fork App</h1>
+        <p class="company__slogan">A real gamechanger in the world of web development</p>
+        <p class="company__description">v. 2.8 For Mac and Windows</p>
+        <div class="block-proposition">
+            <a href="#" class="btn btn--large">Download For Free Now</a>
+            <p class="company__proposition">Unlimited 30-Days Trial Period</p>
+        </div>
+    </div>
+</section>
 
 <!--Revolution editor-->
     <section class='editor'>
@@ -157,7 +157,6 @@
         </div>
         <div class="solution__editor"></div>
     </div>
-    <!--todo-->
 </section>
 
 <!--Social-->
