--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 </li>
             </ul>
         </div>    
-    </header>    
+    </header>
+    <!--Company section-->    
      <section  class="company">
         <div class="container container_company">
            <h1 class="company__title">Fork App</h1>
@@ -66,7 +67,7 @@
                 </li>
                 <li class="editor-actions__item">
                     <a href="#" class="editor-actions__btn" rel="nofollow">
-<!--модификаторы! -->  <svg class="editor-actions__btn_icon" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"></path></svg>
+                        <svg class="editor-actions__btn_icon" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"></path></svg>
                         Star                        
                     </a><a href="#" class="editor-actions__count">
                         21,038
@@ -280,7 +281,7 @@
                 <p class="pricing__item-description">Professional License<br />Email Support</p>
                 <a href="#" class="pricing__item-btn">purchase</a>
             </li>
-            <li class="pricing__item">
+            <li class="pricing__item pricing__item_active">
                 <div class="pricing__item-title">agency</div>
                 <span class="pricing__item-price">$99</span>
                 <p class="pricing__item-description">1-12 Team Members<br />Phone Support</p>
