--- a/index.html
+++ b/index.html
@@ -170,19 +170,53 @@
             <div class="social__slick-block-person">
                 <div class="social__slick-block">
                     <div class="social__slick-person">
-                        <div class="social__slick-person__block">
-                            <img src="images/Grand-Jedi.jpg" alt="grand_jedi" class="social__slick-person__block-img">
+                        <div class="social__slick-person_block">
+                            <img src="images/Grand-Jedi.jpg" alt="grand_jedi" class="social__slick-person_block-img">
                         </div>
-                        <div class="social__slick-person__info">
-                            <h5 class="social__slick-person__name">Master Joda</h5>
-                            <span class="social__slick-person__nick">@grandJedi</span>
+                        <div class="social__slick-person_info">
+                            <h5 class="social__slick-person_name">Master Joda</h5>
+                            <span class="social__slick-person_nick">@grandJedi</span>
                         </div>
                     </div>
-                    <div class="social__slick__info">
-                        <p class="social__slick__info-feedback"><span class="social__slick__info-name">@skyWalker </span>When
+                    <div class="social__slick-info">
+                        <p class="social__slick-info-feedback"><span class="social__slick-info-name">@skyWalker </span>When
                             you look at the dark side, careful you must be, for the dark side looks back.</p>
-                        <span class="social__slick__info-last-feedback">
+                        <span class="social__slick-info-last-feedback">
                         200000 years ago
+                    </span>
+                    </div>
+                </div>
+                <div class="social__slick-block">
+                    <div class="social__slick-person">
+                        <div class="social__slick-person_block">
+                            <img src="images/nil_armstrong.jpg" alt="neil_armstrong" class="social__slick-person_block-img">
+                        </div>
+                        <div class="social__slick-person_info">
+                            <h5 class="social__slick-person_name">Neil Armstrong</h5>
+                            <span class="social__slick-person_nick">@nArmstrong</span>
+                        </div>
+                    </div>
+                    <div class="social__slick-info">
+                        <p class="social__slick-info-feedback"><span class="social__slick-info-name">@huston </span>We have problem.</p>
+                        <span class="social__slick-info-last-feedback">
+    50 years ago
+</span>
+                    </div>
+                </div>
+                <div class="social__slick-block">
+                    <div class="social__slick-person">
+                        <div class="social__slick-person_block">
+                            <img src="images/gandalf.jpg" alt="gandalf" class="social__slick-person_block-img">
+                        </div>
+                        <div class="social__slick-person_info">
+                            <h5 class="social__slick-person_name">Gandalf</h5>
+                            <span class="social__slick-person_nick">@whiteMag</span>
+                        </div>
+                    </div>
+                    <div class="social__slick-info">
+                        <p class="social__slick-info-feedback"><span class="social__slick-info-name">@frodoShaggyPaw </span>Many that live deserve death. And some that die deserve life. Can you give it to them? Then do not be too eager to deal out death in judgement.</p>
+                        <span class="social__slick-info-last-feedback">
+                        many years ago
                     </span>
                     </div>
                 </div>
@@ -193,17 +227,16 @@
         </div>
         <div class="social__info">
             <div class="social__info-git">
-                <a href="https://gitlab.com/TarasBurdeniuk/step2_forkio?nav_source=navbar" target="_blank" class="social__info-git__link"><i class="fab fa-github social__info-git-logo"></i>GitHub</a>
-                <span class="social__info-git__foll">7 352 Followers</span>
+                <a href="https://gitlab.com/TarasBurdeniuk/step2_forkio?nav_source=navbar" target="_blank" class="social__info-git_link"><i class="fab fa-github social__info-git-logo"></i>GitHub</a>
+                <span class="social__info-git_foll">7 352 Followers</span>
             </div>
             <div class="social__info-twitter">
-                <a href="https://twitter.com/jack?lang=uk" class="social__info-twitter__link" target="_blank"><i class="fab fa-twitter social__info-twitter-logo"></i>Twitter</a>
-                <span class="social__info-twitter__foll">136 312 Followers</span>
+                <a href="https://twitter.com/jack?lang=uk" class="social__info-twitter_link" target="_blank"><i class="fab fa-twitter social__info-twitter-logo"></i>Twitter</a>
+                <span class="social__info-twitter_foll">136 312 Followers</span>
             </div>
             <div class="social__info-facebook">
-                <a href="https://www.facebook.com/zuck" class="social__info-facebook__link" target="_blank"><i
-                        class="fab fa-facebook-f social__info-facebook-logo"></i>Facebook</a>
-                <span class="social__info-facebook__foll">218 092 Subscribers</span>
+                <a href="https://www.facebook.com/zuck" class="social__info-facebook_link" target="_blank"><i class="fab fa-facebook-f social__info-facebook-logo"></i>Facebook</a>
+                <span class="social__info-facebook_foll">218 092 Subscribers</span>
             </div>
         </div>
     </div>
@@ -242,43 +275,37 @@
 
 <footer class='footer'>
     <div class="footer__container">
-        <div class="footer__container_logo">
-            <div class="footer__container_logo-block">
-                <div class="footer__container_logo-block-img"></div>
-                <h2 class="footer__container_logo-block-title">fork<span>io</span></h2>
+        <div class="footer__logo">
+            <div class="footer__logo-block">
+                <div class="footer__logo-block-img"></div>
+                <a class="footer__logo-block-title">fork<span>io</span></a>
             </div>
-            <p class="footer__container_logo-info">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no
-                quo.</p>
+            <p class="footer__logo-info">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no quo.</p>
         </div>
-        <div class="footer__container_menu-nav">
-            <h4 class="footer__container_menu-nav__title">Navigation</h4>
-            <ul class="footer__container_menu-nav_bar">
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Home</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Overview</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">About</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Buying Options</a></li>
-                <li class="footer__container_menu-nav_bar-link"><a class="footer__container_menu-nav_bar-link-item"
-                                                                   href="#">Support</a></li>
+        <div class="footer__menu-nav">
+            <h4 class="footer__menu-nav__title">Navigation</h4>
+            <ul class="footer__menu-nav_bar">
+                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Home</a></li>
+                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Overview</a></li>
+                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">About</a></li>
+                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Buying Options</a></li>
+                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Support</a></li>
             </ul>
         </div>
-        <div class="footer__container__requisites">
-            <div class="footer__container__requisites-phone">
-                <a href="tel: +3475677890" class="footer__container__requisites-phone-link">347 567 78 90</a>
-                <p class="footer__container__requisites-phone-info">AVAILABLE AT 12PM - 18PM</p>
+        <div class="footer__requisites">
+            <div class="footer__requisites-phone">
+                <a href="tel: +3475677890" class="footer__requisites-phone-link">347 567 78 90</a>
+                <p class="footer__requisites-phone-info">AVAILABLE AT 12PM - 18PM</p>
             </div>
-            <div class="footer__container__requisites-location">
-                <h4 class="footer__container__requisites-location-city">New York, NY</h4>
-                <span class="footer__container__requisites-location-address">560 Judah St & 15th Ave, Apt 5</span>
-                <span class="footer__container__requisites-location-address">San Francisco, CA, 230903</span>
+            <div class="footer__requisites-location">
+                <h4 class="footer__requisites-location-city">New York, NY</h4>
+                <span class="footer__requisites-location-address">560 Judah St & 15th Ave, Apt 5</span>
+                <span class="footer__requisites-location-address">San Francisco, CA, 230903</span>
             </div>
         </div>
-        <div class="footer__container__info">
-            <h4 class="footer__container__info-title">Info</h4>
-            <p class="footer__container__info-text">Wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+        <div class="footer__info">
+            <h4 class="footer__info-title">Info</h4>
+            <p class="footer__info-text">Wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
                 suscipit
                 lobortis nisl ut aliquip ex commodo consequat. Autem vel hendrerit iriure dolor in hendrerit.</p>
         </div>
