edited gulpfile, index.html

--- a/index.html
+++ b/index.html
@@ -268,41 +268,41 @@
         <h2 class="about__title">People Are Talking About Fork</h2>
         <ul class="about__list">
             <li class="about__item">
-                <div class="about__item-img"><img src="../images/smashing-magazin-logo.png" alt="Logo"></div>
+                <div class="about__item-img"><img src="images/smashing-magazin-logo.png" alt="Logo"></div>
                 <p class="about__item-text">Sed vestibulum scelerisque urna,
                     eu finibus leo facilisis sit amet. Proin id dignissim
                     magna. Sed varius urna et pulvinar venenatis.
                 </p>
             </li>
             <li class="about__item">
-                <div class="about__item-img"><img src="../images/codrops-logo.png" alt="Logo"></div>
+                <div class="about__item-img"><img src="images/codrops-logo.png" alt="Logo"></div>
                 <p class="about__item-text">Donec euismod dolor ut ultricies
                     consequat. Vivamus urna ipsum, rhoncus molestie neque ac,
                     mollis eleifend nibh.
                 </p>
             </li>
             <li class="about__item">
-                <div class="about__item-img"><img src="../images/w-logo.png" alt="Logo"></div>
+                <div class="about__item-img"><img src="images/w-logo.png" alt="Logo"></div>
                 <p class="about__item-text">In efficitur in velit et tempus.
                     Duis nec odio dapibus, suscipit erat fringilla, imperdiet
                     nibh. Morbi tempus auctor felis ac vehicula.
                 </p>
             </li>
             <li class="about__item">
-                <div class="about__item-img"><img src="../images/pixel-budda-logo.png" alt="Logo"></div>
+                <div class="about__item-img"><img src="images/pixel-budda-logo.png" alt="Logo"></div>
                 <p class="about__item-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet.
                     Proin id dignissim magna. Sed varius urna et pulvinar venenatis.
                 </p>
             </li>
             <li class="about__item">
-                <div class="about__item-img"><img src="../images/creative-bloq-logo.png" alt="Logo"></div>
+                <div class="about__item-img"><img src="images/creative-bloq-logo.png" alt="Logo"></div>
                 <p class="about__item-text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla
                     faucibus lorem
                     id arcu consequat faucibus.
                 </p>
             </li>
             <li class="about__item">
-                <div class="about__item-img"><img src="../images/tnw-logo.png" alt="Logo"></div>
+                <div class="about__item-img"><img src="images/tnw-logo.png" alt="Logo"></div>
                 <p class="about__item-text">Fusce pharetra erat id odio blandit, nec
                     pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.
                 </p>
