edited style in footer

--- a/index.html
+++ b/index.html
@@ -379,15 +379,15 @@
             <p class="footer__logo-info">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no quo.</p>
         </div>
         <div class="footer__menu-nav">
-            <h4 class="footer__menu-nav__title">Navigation</h4>
-            <ul class="footer__menu-nav_bar">
-                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Home</a></li>
-                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Overview</a>
+            <h4 class="footer__menu-nav-title">Navigation</h4>
+            <ul class="footer__menu-nav-bar">
+                <li class="footer__menu-nav-bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Home</a></li>
+                <li class="footer__menu-nav-bar-link"><a class="footer__menu-nav-bar-link-item" href="#">Overview</a>
                 </li>
-                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">About</a></li>
-                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Buying
+                <li class="footer__menu-nav-bar-link"><a class="footer__menu-nav-bar-link-item" href="#">About</a></li>
+                <li class="footer__menu-nav-bar-link"><a class="footer__menu-nav-bar-link-item" href="#">Buying
                     Options</a></li>
-                <li class="footer__menu-nav_bar-link"><a class="footer__menu-nav_bar-link-item" href="#">Support</a>
+                <li class="footer__menu-nav-bar-link"><a class="footer__menu-nav-bar-link-item" href="#">Support</a>
                 </li>
             </ul>
         </div>
